--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -164,6 +164,19 @@
                           <field name="type_budget" widget="radio" string="Budget"/>
                      </group>
                  </xpath>
+                 <xpath expr="//field[@name='description']" position="before">
+                     <group class="oe_subtotal_footer oe_right">
+                        <!--<field name="expense" widget="monetary" readonly="1"-->
+                               <!--options="{'currency_field': 'currency_id'}"/>-->
+                            <div class="oe_subtotal_footer_separator oe_inline">
+                                <label for="total_estimate_price"/>
+                                    <button name="button_dummy" states="draft"
+                            string="(update)" type="object" class="oe_edit_only oe_link"/>
+                            </div>
+                        <field name="total_estimate_price" nolabel="1" class="oe_subtotal_footer_separator"
+                            widget="monetary" readonly="1" options="{'currency_field': 'currency_id'}"/>
+                    </group>
+                 </xpath>
              </field>
          </record>
 
