[ADD] purchase_indonesia : feature report quotation_comparison form
1.ADD label : subtotal, tax, grand total, franco, TOP,delivery in QCF report
2.ADD Coloumn Remarks in QCF report
3.ADD Coloumn Vendor Name in QCF report
4.ADD Budget Availabilty in Purchase request report
5.ADD button print for report , QCK, Quotation, PO, PP, GRN

--- a/purchase_indonesia/reports/report_purchase_request.xml
+++ b/purchase_indonesia/reports/report_purchase_request.xml
@@ -179,12 +179,16 @@
 							<br></br>
 							<br></br>
 		              		<div class="row" style="text-align:left;font-size:14pt;">
-		              			<div class="col-xs-3" >
-		              				Anggaran Tersedia  
-		              			</div>
-		              			<div class="col-xs-3" >
-		              				Anggaran Tidak Tersedia  
-		              			</div>
+		              			<t t-if="o.type_budget == 'available' ">
+									<div class="col-xs-3" >
+		              					<span t-field="o.type_budget"/>
+									</div>
+								</t>
+								<t t-if="o.type_budget == 'not' ">
+									<div class="col-xs-3" >
+		              					<span t-field="o.type_budget"/>
+									</div>
+								</t>
 		              			<div class="col-xs-6" >
 		              				&#160;
 		              			</div>
