--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -45,19 +45,11 @@
             <field name="arch" type="xml">
                 <form>
                      <header coolspan="10">
+                            <button name="print_qcf" string="Print QCF" type="object" groups="base.group_user"/>
                             <field name="state" widget="statusbar" statusbar_visible="draft,confirm,done"/>
                      </header>
                     <sheet>
                          <div class="oe_right oe_button_box">
-                                <!--<button name="return_action_to_open"-->
-                                    <!--type="object"-->
-                                    <!--class="oe_stat_button"-->
-                                    <!--string="Order List"-->
-                                    <!--icon="fa-list-alt"-->
-                                    <!--context="{'xml_id':'action_purchase_line_product_tree'}"-->
-                                    <!--attrs="{'invisible': [('state', '!=', 'draft')]}"-->
-                                    <!-->-->
-                                <!--</button>-->
                                 <button name="open_product_line" type="object"
                                         string="Product Lines"
                                         class="oe_stat_button" icon="fa-list" groups="purchase.group_advance_bidding"/>
