--- a/purchase_indonesia/reports/report_purchase_order.xml
+++ b/purchase_indonesia/reports/report_purchase_order.xml
@@ -126,10 +126,10 @@
 									      QTY
 									    </td>
 									    <td>
-									      PRICE/UNIT
+									      UOM
 									    </td>
 									    <td>
-									      TAXES
+									      PRICE/UNIT
 									    </td>
 									    <td>
 									      TOTAL
@@ -148,12 +148,10 @@
 										      	<span t-field="l.product_qty"/>
 										    </td>
 										    <td>
-										      	<span t-field="l.price_unit"/>
+										      	<span t-field="l.product_uom"/>
 										    </td>
 										    <td>
-										      	<t t-foreach="l.taxes_id" t-as="t">
-										      	    <span t-field="t.name"/>
-										     	</t> 	    
+										      	<span t-field="l.price_unit"/>
 										    </td>
 										    <td>
 										      	<span t-field="l.price_subtotal"/>
