[FIX] purchase_indonesia : bug button reject in purchase request cannot change state  to rejected in purchase request form
[ADD] purchase_indonesia : add product category in res.partner

--- a/purchase_indonesia/reports/report_purchase_quotation.xml
+++ b/purchase_indonesia/reports/report_purchase_quotation.xml
@@ -176,7 +176,7 @@
 		                          		    Confirmed By	:
 		                          		</td>
                                         <td class="noborder">
-                                        	Fax/Email/Phone/Other
+                                        	: <span t-field="o.confirmed_by"/>
                                         </td>
                                         <td class="noborder">
                                         	&#160;
