--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -45,9 +45,9 @@
             <field name="arch" type="xml">
                 <form>
                      <header coolspan="10">
-                            <button name="button_send_request" states="draft" string="Send QCF" class="oe_highlight" />
-                            <button name="button_confirm_request" states="confirm" string="Confirm" class="oe_highlight" />
-                            <button name="%(action_quotation_comparison_reject)d" states="confirm" string="Reject QCF" type="action"/>
+                            <button name="button_send_request" states="draft" string="Send QCF" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
+                            <button name="button_confirm_request" states="confirm" string="Confirm" class="oe_highlight" groups="purchase_request.group_purchase_request_manager"/>
+                            <button name="%(action_quotation_comparison_reject)d" states="confirm" string="Reject QCF" type="action" groups="purchase_request.group_purchase_request_manager"/>
                             <button name="button_cancel" states="draft" string="Cancel"/>
                             <button name="print_qcf" string="Print QCF" type="object" groups="base.group_user"/>
                             <field name="state" widget="statusbar" statusbar_visible="draft,confirm,done"/>
